# negative_obstacle_detection

./: CMakeLists.txt  README.md  license.txt  package.xml
include/math/: line2d.h
include/negative_obstacle_detection/: FilterPCL.h  PointCloudToLaser.h
include/ros/: ros_helpers.h
launch/: negative_obstacle_detection.launch
param/: negative_obstacle_detection.yaml
shared/math/: geometry.h
src/: FFD.cpp  FFD.h  FFD_main.cpp  FilterPCL.cpp  PointCloudToLaser.cpp  negative_obstacle_detection.cpp  negative_obstacle_detection.h  negative_obstacle_detection_main.cpp
