<?xml version="1.0"?>
<package format="2">
  <name>negative_obstacle_detection</name>
  <version>0.0.0</version>
  <description>The negative_obstacle_detection package</description>
  
  <author email="adrianabeyta@utexas.edu">Adrian Abeyta</author>
  <maintainer email="adrianabeyta@utexas.edu">Adrian Abeyta</maintainer>
  
  <license>Propietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
